# cmake-multi-project-template

./: CMakeLists.txt
src/app1/: CMakeLists.txt
src/app1/src/: main.cpp
src/app2/: CMakeLists.txt
src/lib1/: CMakeLists.txt
src/lib1/inc/lib1/: fun1.h
src/lib1/src/: fun1.cpp
src/lib2/: CMakeLists.txt
src/lib2/inc/lib2/: fun2.h
src/lib2/src/: fun2.cpp
